tests/integrations/basic-fail/tests/actual_tests_bless/revisions_same_everywhere.rs
use basic_fail::add;
//@ revisions: foo bar

fn main() {
    add("42", 3);
    //~^ ERROR: mismatched types
}
